<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.psu.sjt5370.stockingproto.ProductStockActivity">

    <Button
        android:id="@+id/pickUpButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/pick_up_button"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/productScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/pickUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/moveLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_receive_quantity"
                app:layout_constraintBaseline_toBaselineOf="@+id/receiveQuantity"
                app:layout_constraintStart_toStartOf="@+id/priceLabel" />

            <EditText
                android:id="@+id/receiveQuantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="number"
                android:maxLength="9"
                android:padding="2dp"
                android:textAlignment="textEnd"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/priceField"
                app:layout_constraintStart_toEndOf="@+id/moveLabel"
                app:layout_constraintTop_toBottomOf="@+id/priceField" />

            <TextView
                android:id="@+id/manufacturerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/manufacturer_label"
                app:layout_constraintStart_toStartOf="@+id/nameLabel"
                app:layout_constraintTop_toBottomOf="@+id/nameField" />

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/name_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/priceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_label"
                app:layout_constraintBaseline_toBaselineOf="@+id/priceField"
                app:layout_constraintStart_toStartOf="@+id/manufacturerLabel" />

            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/description_label"
                app:layout_constraintStart_toStartOf="@+id/moveLabel"
                app:layout_constraintTop_toBottomOf="@+id/receiveQuantity" />

            <EditText
                android:id="@+id/nameField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="100"
                android:padding="2dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/nameLabel"
                app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

            <EditText
                android:id="@+id/manufacturerField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:padding="2dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/nameField"
                app:layout_constraintStart_toStartOf="@+id/nameField"
                app:layout_constraintTop_toBottomOf="@+id/manufacturerLabel" />

            <EditText
                android:id="@+id/priceField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:maxLength="9"
                android:padding="2dp"
                android:textAlignment="textEnd"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/manufacturerField"
                app:layout_constraintStart_toEndOf="@+id/priceLabel"
                app:layout_constraintTop_toBottomOf="@+id/manufacturerField" />

            <ScrollView
                android:id="@+id/descriptionScrollView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/receiveQuantity"
                app:layout_constraintStart_toStartOf="@+id/manufacturerField"
                app:layout_constraintTop_toBottomOf="@id/descriptionLabel">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/descriptionField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="20"
                        android:inputType="textMultiLine"
                        android:padding="2dp"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="parent" />

                </android.support.constraint.ConstraintLayout>
            </ScrollView>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
